Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">F2er-club</h1>
-      <h2 class="project-tagline">汇集前端学习资源、工具、实践经验和技巧。</h2>
+      <h2 class="project-tagline">汇集前端学习资源、工具、实践经验和技巧</h2>
       <a href="https://github.com/linggan100/f2er-club" class="btn">View on GitHub</a>
       <a href="https://github.com/linggan100/f2er-club/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/linggan100/f2er-club/tarball/master" class="btn">Download .tar.gz</a>
