Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
       <h3>
 <a id="欢迎来到f2er-club" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E6%9D%A5%E5%88%B0f2er-club" aria-hidden="true"><span class="octicon octicon-link"></span></a>欢迎来到F2er-club.</h3>
 
-<p>本站由“灵感_idea”(赵侦镐)负责更新和维护。</p>
-
 <h3>
 <a id="主要目的" class="anchor" href="#%E4%B8%BB%E8%A6%81%E7%9B%AE%E7%9A%84" aria-hidden="true"><span class="octicon octicon-link"></span></a>主要目的</h3>
 
@@ -53,6 +51,9 @@
 <p>十、牛人专栏</p>
 
 <p>十一、技术之外</p>
+
+<h4>
+<a id="本站由灵感_idea赵侦镐负责更新和维护" class="anchor" href="#%E6%9C%AC%E7%AB%99%E7%94%B1%E7%81%B5%E6%84%9F_idea%E8%B5%B5%E4%BE%A6%E9%95%90%E8%B4%9F%E8%B4%A3%E6%9B%B4%E6%96%B0%E5%92%8C%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a>本站由“灵感_idea”(赵侦镐)负责更新和维护。</h4>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/linggan100/f2er-club">F2er-club</a> is maintained by <a href="https://github.com/linggan100">linggan100</a>.</span>
