--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>十一、技术之外</p>
 
 <h4>
-<a id="本站由灵感_idea赵侦镐负责更新和维护" class="anchor" href="#%E6%9C%AC%E7%AB%99%E7%94%B1%E7%81%B5%E6%84%9F_idea%E8%B5%B5%E4%BE%A6%E9%95%90%E8%B4%9F%E8%B4%A3%E6%9B%B4%E6%96%B0%E5%92%8C%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a>本站由“灵感_idea”(赵侦镐)负责更新和维护。</h4>
+<a id="本站由灵感_idea赵侦镐负责更新和维护" class="anchor" href="#%E6%9C%AC%E7%AB%99%E7%94%B1%E7%81%B5%E6%84%9F_idea%E8%B5%B5%E4%BE%A6%E9%95%90%E8%B4%9F%E8%B4%A3%E6%9B%B4%E6%96%B0%E5%92%8C%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a>本站由<a href="http://ideazhao.com/">“灵感_idea”(赵侦镐)</a>负责更新和维护。</h4>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/linggan100/f2er-club">F2er-club</a> is maintained by <a href="https://github.com/linggan100">linggan100</a>.</span>
